Fix tiny vertical height alignment in select2 multiple choice labels

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -278,7 +278,7 @@
     display: inline-block;
     float: left;
     font-weight: 500;
-    line-height: 34px;
+    line-height: 33px;
     margin: 6px 0 0 5px;
     max-width: 86%; // Magic number - largest max-width usable to prevent the label overlapping the dropdown arrow
     overflow: hidden;
